<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tripformbg"
    tools:context=".DetailCustomerActivity">

    <TextView
        android:id="@+id/tvCustHeader"
        android:layout_width="406dp"
        android:layout_height="50dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/customer_registration"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="?attr/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="395dp"
        android:layout_height="539dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCustHeader">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCustFirstName"
                android:layout_width="188dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/first_name"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etCustFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCustLastName"
                android:layout_width="188dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/last_name"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etCustLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCustAddress"
                android:layout_width="188dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/address"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etCustAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCustCity"
                android:layout_width="188dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/city"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etCustCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCustCountry"
                android:layout_width="188dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/country"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spCustCountry"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCustProv"
                android:layout_width="188dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/province"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spCustProvState"
                android:layout_width="157dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spCustCountry" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCustPostal"
                android:layout_width="188dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/postal_code"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etCustPostal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCustHomePhone"
                android:layout_width="188dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/home_phone"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etCustHomePhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCustBusPhone"
                android:layout_width="188dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/business_phone"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etCustBusPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCustEmail"
                android:layout_width="188dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="188dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Password:"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="100dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/button_border"
                android:fontFamily="serif"
                android:text="@string/clear"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.899"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.988" />

            <Button
                android:id="@+id/btnCreateNewCust"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button_border"
                android:fontFamily="serif"
                android:text="@string/create"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.988" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>